Worked on the login window

--- a/Client/Styles/Buttons.axaml
+++ b/Client/Styles/Buttons.axaml
@@ -47,6 +47,16 @@
       <Setter Property="BorderBrush" Value="Transparent" />
    </Style>
 
+   <Style Selector="Button.Unstyled">
+      <Setter Property="Background" Value="Transparent" />
+      <Setter Property="BorderBrush" Value="Transparent" />
+   </Style>
+
+   <Style Selector="Button:pointerover.Unstyled /template/ ContentPresenter">
+      <Setter Property="Background" Value="Transparent" />
+      <Setter Property="BorderBrush" Value="Transparent" />
+   </Style>
+
    <Style Selector="Button TextBlock">
       <Setter Property="FontSize" Value="16.0" />
       <Setter Property="Margin" Value="0" />
