--- a/Client/Resources/Fonts.axaml
+++ b/Client/Resources/Fonts.axaml
@@ -1,5 +1,6 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
    <FontFamily x:Key="Outfit">avares://Client/Assets/Fonts#Outfit</FontFamily>
+   <FontFamily x:Key="Poppins">avares://Client/Assets/Fonts#Poppins</FontFamily>
    <FontFamily x:Key="Inter">avares://Client/Assets/Fonts#Inter</FontFamily>
 </ResourceDictionary>
