--- a/Client/View/Content/Login/ConnectPanel.axaml
+++ b/Client/View/Content/Login/ConnectPanel.axaml
@@ -5,42 +5,44 @@
    xmlns:view="clr-namespace:Client.View.Content"
    xmlns:controls="clr-namespace:Client.View.Controls"
    xmlns:utility="clr-namespace:Client.Utility"
+   xmlns:templates="clr-namespace:Client.View.Content.Login.Templates"
    x:Class="Client.View.Content.Login.ConnectPanel">
 
    <Design.DataContext>
       <vm:LoginWindowViewModel />
    </Design.DataContext>
 
-   <Grid RowDefinitions="Auto, Auto, *">
-      <TextBlock Grid.Row="0"
-                 VerticalAlignment="Center"
-                 Classes="Bold Title">
-         <Run Text="Connecting" />
-         <utility:Typewriter
-            Text="..."
-            Interval="0:00:00.500" />
-      </TextBlock>
+   <UserControl.Styles>
+      <StyleInclude Source="Templates/TitleTemplate.axaml" />
+   </UserControl.Styles>
 
-      <TextBlock Grid.Row="1"
-                 VerticalAlignment="Center"
-                 TextWrapping="Wrap"
-                 Classes="Subtitle">
+   <templates:TitleTemplate>
+      <templates:TitleTemplate.Title>
+         <TextBlock VerticalAlignment="Center"
+                    Classes="H1">
+            <Run Text="Connecting" />
+            <utility:Typewriter
+               Text="..."
+               Interval="0:00:00.500" />
+         </TextBlock>
+      </templates:TitleTemplate.Title>
+      <templates:TitleTemplate.Subtitle>
          <Run Text="Connection handshake"
-              Classes="Bold" />
+              FontWeight="Bold" />
          <Run Text="is in progress." />
-      </TextBlock>
+      </templates:TitleTemplate.Subtitle>
 
-      <ItemsControl Grid.Row="2" ItemsSource="{Binding ConnectionSteps}">
+      <ItemsControl ItemsSource="{Binding ConnectionSteps}">
          <ItemsControl.ItemTemplate>
             <DataTemplate>
                <Grid ColumnDefinitions="Auto, Auto, *"
                      RowDefinitions="Auto, Auto">
                   <Button Grid.Row="0" Grid.Column="0">
-                     <controls:Icon Source="{StaticResource Icon.Arrow-Down-S}" />
+                     <controls:Icon Source="{StaticResource Icon.Arrow-Down-S-Fill}" />
                   </Button>
                </Grid>
             </DataTemplate>
          </ItemsControl.ItemTemplate>
       </ItemsControl>
-   </Grid>
+   </templates:TitleTemplate>
 </view:LoginBase>
