--- a/Client/View/Content/Login/Templates/TitleTemplate.axaml
+++ b/Client/View/Content/Login/Templates/TitleTemplate.axaml
@@ -1,18 +1,19 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="using:Client.View.Content.Templates">
+        xmlns:templates="clr-namespace:Client.View.Content.Login.Templates">
    <Design.PreviewWith>
-      <controls:TitleTemplate />
+      <templates:TitleTemplate />
    </Design.PreviewWith>
 
-   <Style Selector="controls|TitleTemplate">
+   <Style Selector="templates|TitleTemplate">
       <!-- Set Defaults -->
       <Setter Property="Template">
          <ControlTemplate>
-            <Grid RowDefinitions="Auto, Auto, *">
+            <Grid RowDefinitions="Auto, Auto, *"
+                  Margin="0 0 0 10.0">
                <TextBlock Grid.Row="0"
-                          Text="{TemplateBinding Title}"
-                          Classes="H1" />
+                          Classes="H1"
+                          Inlines="{TemplateBinding Title}" />
                <TextBlock Grid.Row="1"
                           Classes="Subtitle"
                           Inlines="{TemplateBinding Subtitle}" />
